fix editor overflow issue

--- a/app/assets/stylesheets/views/article-form.scss
+++ b/app/assets/stylesheets/views/article-form.scss
@@ -72,7 +72,6 @@
   }
 
   &__content {
-    height: 100%;
     overflow: auto;
     height: calc(
       100vh - var(--header-height) - var(--article-form-actions-height)
